Adding photos and edited index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="main.css">
+        <link rel="icon" href="icon.jpg">
         <title>Joshua Hollander</title>
     </head>
+    <div class="header">
+        <h1>Web Portfolio for Joshua Hollander</h1>
+    </div>
     <body>
-        <h1>Web Portfolio</h1>
-        <p>Something else</p>
+        <div class="section">
+            <h2>About Me</h2>
+            <div class="section" style="margin:10px">
+                    <img class="profile" src="pic.jpg" alt="Photo of me!">
+                    <p>I'm a Junior current enrolled at the University of Wisconsin-Madison majoring in Computer Science with a certificate (minor) in Mathematics.</p>
+            </div>
+        </div>
+        
     </body>
 </html>
