Added a sticky header and filled in education

--- a/index.html
+++ b/index.html
@@ -9,14 +9,67 @@
     <div class="header">
         <h1>Web Portfolio for Joshua Hollander</h1>
     </div>
+
+    <nav>
+        <ul class="navbar">
+                <li><a class="navlink" href="#AboutMe">About</a></li>
+                <li><a class="navlink" href="#Experience">Experience</a></li>
+                <li><a class="navlink" href="#Education">Education</a></li>
+                <li><a class="navlink" href="#Skills">Skills</a></li>
+                <li><a class="navlink" href="#Projects">Projects</a></li>
+                <li><a class="navlink" href="#Contact">Contact Me</a></li>
+        </ul>
+    </nav>
+
     <body>
         <div class="section">
-            <h2>About Me</h2>
+            <h2 id="AboutMe">About Me</h2>
             <div class="section" style="margin:10px">
-                    <img class="profile" src="pic.jpg" alt="Photo of me!">
-                    <p>I'm a Junior current enrolled at the University of Wisconsin-Madison majoring in Computer Science with a certificate (minor) in Mathematics.</p>
+                <p>I'm a Junior currently enrolled at the University of Wisconsin-Madison majoring in Computer Science with a certificate (Madison-talk for a minor) in Mathematics.</p>
             </div>
         </div>
-        
+        <div class="section">
+            <h2 id="Experience">Experience</h2>
+            <div class="section" style="margin:10px">
+                <ul>
+                    <li><strong>Cashier - Walmart</strong></li>
+                    <ul>
+                        <li>Assisted customers with inquiries and issues while providing excellent customer service</li>
+                        <li>Utilized quick thinking to promptly solve unexpected problems (primarily technical)</li>
+                    </ul>
+                    <li><strong>Production Assistant - Stephen Edward Graphics</strong></li>
+                    <ul>
+                        <li>Assisted production of vinyl decal creation through Adobe Illustrator on OSX, alongside cutting, peeling, applying transfer tape, and trimming decals</li>
+                        <li>Worked with decals that required immense attention to detail</li>
+                        <li>Assisted with the packaging and shipment of online orders</li>
+                        <li>Demonstrated and improved time management skills</li>
+                    </ul>
+                    <li><strong>Food Preparer - Four Lakes Market</strong></li>
+                    <ul>
+                        <li>Maintained and improved excellent customer service skills</li>
+                        <li>Utilized skills that required me to be detailed oriented and work in a fast-paced environment</li>
+                    </ul>
+                    <li><strong>Post-Production Assistant - UW Extension Publications Department</strong></li>
+                    <ul>
+                            <li>Manage both digital and physical file collections/databases of previously created publications (approx. 1,500+) alongside related forms associated with author contact histories and edit histories</li>
+                            <li>Assist the production process of publications by doing any necessary filing for the publication and creating a page for the publication where it can be purchased by the public at <a href="https://learningstore.extension.wisc.edu/">The Learning Store</a></li>
+                            <li>Utilize Adobe CC to create and edit graphics for online advertisements for products that are then posted onto multiple social media platforms</li>
+                            <li>Work with the Publishing Unit’s warehouse to coordinate the correct formatting, printing, and cutting of document proofs and final versions</li>
+                            <li>Digitize forms relating to the creation/editing/purchasing of older publications (circa early 1980s - present)</li>
+                            <li>Assist with the physical and digital transition of the Publishing Unit, as it is now under the ownership of UW-Madison (e.g. switching Ecommerce platforms and moving equipment to a new office environment)</li>
+                        </ul>
+                    <li><strong>Ecommerce Website Migration Extension Internship - UW Extension Publications Department</strong></li>
+                    <ul>
+                            <li>Assisted with the migration of 1,500+ PDF publication files, each of which must align with its product page counterpart</li>
+                            <li>Used HTML and CSS to assist with badging, branding, and visual design of individual product pages to align the Learning Store’s user interface with UW–Madison’s web guidelines and update catalog entries with legacy formatting</li>
+                            <li>Scouted the Learning Store catalog and publication pages for consistency in HTML formatting</li>
+                            <li>Ensured 301 redirects for URLs were functioning correctly</li>
+                            <li>Used Adobe CC to craft graphics and other marketing pieces for use on the Learning Store’s Shopify homepage and social media pages to promote new and revised publications</li>
+                            <li>Worked closely with the Publishing Unit’s off-site warehouse to coordinate, modify, and adjust Shopify email notifications for order fulfillment</li>
+                            <li>Created a custom invoicing sheet utilizing HTML, CSS, and Liquid (Shopify's custom template platform)</li>
+                        </ul>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
