--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
     <div class="container" id="Experience" style="padding: 10px">
       <h2 class="row align-items-center justify-content-center">Experience</h2>
       <div class="section" style="margin:10px">
-        <ul>
-          <li><strong>Cashier - Walmart</strong></li>
-          <ul>
-            <li>Assisted customers with inquiries and issues while providing excellent customer service</li>
-            <li>Utilized quick thinking to promptly solve unexpected problems (primarily technical)</li>
+        <ul class="list-group">
+          <div class="list-group-item">
+            <div class="d-flex">
+              <div class="mr-auto p-2"><strong>Cashier - Walmart</strong></div>
+              <div class="p-2">1 year</div>
+            </div>
+          </div>
+          <ul class="list-group-inline">
+            <li class="list-group-item">Assisted customers with inquiries and issues while providing excellent customer service</li>
+            <li class="list-group-item">Utilized quick thinking to promptly solve unexpected problems (primarily technical)</li>
           </ul>
           <li><strong>Production Assistant - Stephen Edward Graphics</strong></li>
           <ul>
