Added horizontal rules and a background color

--- a/index.html
+++ b/index.html
@@ -1,180 +1,214 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Joshua Hollander</title>
-    <link rel="icon" href="icon.jpg">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <title>Joshua Hollander</title>
+  <link rel="icon" href="icon.jpg">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  </head>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-      <div class="mx-auto flex-sm-nowrap">
-        <ul class="navbar-nav nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#AboutMe">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Experience">Work Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#AboutMe">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#AboutMe">Skills</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Projects</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Game Shelf</a>
-                <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Me</a>
-          </li>
-        </ul>
-        </div>
-      </nav>
+</head>
 
-    <div class="container" style="margin-top: 20px">
+<body>
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="mx-auto flex-sm-nowrap">
+      <ul class="navbar-nav nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#AboutMe">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Experience">Work Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#AboutMe">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#AboutMe">Skills</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">Projects</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Game Shelf</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Me</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div id="main-container" class="container">
+    <div class="container">
       <div class="row align-items-center justify-content-center">
-          <h1 class="text.center">Joshua Hollander</h1>
+        <h1 class="text.center">Joshua Hollander</h1>
       </div>
     </div>
-
-    <div class="container" id="AboutMe" style="padding: 10px">
-        <h2 class="row align-items-center justify-content-center">About Me</h2>
+<hr>
+    <div class="container" id="AboutMe">
+      <h2 class="row align-items-center justify-content-center">About Me</h2>
       <div class="row" style="padding-top: 10px">
         <div class="col-4">
-          <img src="pic.jpg" class="rounded float-left" style="width: 200px; box-shadow: 0px 4px 8px gray; margin-right: 10px"/>
+          <img src="pic.jpg" class="rounded float-left"
+            style="width: 200px; box-shadow: 0px 4px 8px gray; margin-right: 10px" />
         </div>
-        <div class="col-8">I'm a Junior currently enrolled at the University of Wisconsin-Madison majoring in Computer Science with a certificate (Madison-talk for a minor) in Mathematics.
+        <div class="col-8">I'm a Junior currently enrolled at the University of Wisconsin-Madison majoring in Computer
+          Science with a certificate (Madison-talk for a minor) in Mathematics.
+        </div>
       </div>
-    </div>
-
-    <div class="container" id="Experience" style="padding: 10px">
-      <h2 class="row align-items-center justify-content-center">Work Experience</h2>
-      <div class="section" style="margin-top: 10px">
-        <ul class="list-group">
-          <div class="list-group-item" id="Walmart">
-            <div class="d-flex">
-              <div class="mr-auto p-2">
-                <div class="col">
-                  <div class="row">
-                  <strong>Cashier</strong>
-                </div>
-                <div class="row">
-                  Walmart
-                </div>
-                </div>
-              </div>
-              <div class="p-2">1 year</div>
-            </div>
-            <ul class="list-group-flush">
-                <li class="list-group-item">Assisted customers with inquiries and issues while providing excellent customer service</li>
-                <li class="list-group-item">Utilized quick thinking to promptly solve unexpected problems (primarily technical)</li>
-              </ul>
-          </div>
-          <div class="list-group-item" id="StephenEdwardGraphics">
+<hr>
+      <div class="container" id="Experience">
+        <h2 class="row align-items-center justify-content-center">Work Experience</h2>
+        <div class="section top-margin">
+          <ul class="list-group">
+            <div class="list-group-item" id="Walmart">
               <div class="d-flex">
-                  <div class="mr-auto p-2">
-                    <div class="col">
-                      <div class="row">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
+                      <strong>Cashier</strong>
+                    </div>
+                    <div class="row">
+                      Walmart
+                    </div>
+                  </div>
+                </div>
+                <div class="p-2">1 year</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Assisted customers with inquiries and issues while providing excellent
+                  customer service</li>
+                <li class="list-group-item">Utilized quick thinking to promptly solve unexpected problems (primarily
+                  technical)</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="StephenEdwardGraphics">
+              <div class="d-flex">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
                       <strong>Post Production Assistant</strong>
                     </div>
                     <div class="row">
                       Stephen Edward Graphics
                     </div>
-                    </div>
                   </div>
-                  <div class="p-2">1 year</div>
+                </div>
+                <div class="p-2">1 year</div>
               </div>
               <ul class="list-group-flush">
-                  <li class="list-group-item">Assisted production of vinyl decal creation through Adobe Illustrator on OSX, alongside cutting, peeling, applying transfer tape, and trimming decals</li>
-                  <li class="list-group-item">Worked with decals that required immense attention to detail</li>
-                  <li class="list-group-item">Assisted with the packaging and shipment of online orders</li>
-                  <li class="list-group-item">Demonstrated and improved time management skills</li>
-                </ul>
-          </div>
-          <div class="list-group-item" id="FourLakesMarket">
+                <li class="list-group-item">Assisted production of vinyl decal creation through Adobe Illustrator on
+                  OSX, alongside cutting, peeling, applying transfer tape, and trimming decals</li>
+                <li class="list-group-item">Worked with decals that required immense attention to detail</li>
+                <li class="list-group-item">Assisted with the packaging and shipment of online orders</li>
+                <li class="list-group-item">Demonstrated and improved time management skills</li>
+              </ul>
+            </div>
+            <div class="list-group-item" id="FourLakesMarket">
               <div class="d-flex">
-                  <div class="mr-auto p-2">
-                    <div class="col">
-                      <div class="row">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
                       <strong>Food Preparer</strong>
                     </div>
                     <div class="row">
                       Four Lakes Market
                     </div>
-                    </div>
                   </div>
-                  <div class="p-2">1 year</div>
+                </div>
+                <div class="p-2">1 year</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Maintained and improved excellent customer service skills</li>
+                <li class="list-group-item">Utilized skills that required me to be detailed oriented and work in a
+                  fast-paced environment</li>
+              </ul>
             </div>
-            <ul class="list-group-flush">
-              <li class="list-group-item">Maintained and improved excellent customer service skills</li>
-              <li class="list-group-item">Utilized skills that required me to be detailed oriented and work in a fast-paced environment</li>
-            </ul>
-          </div>
-          <div class="list-group-item" id="PostProdAssist">
+            <div class="list-group-item" id="PostProdAssist">
               <div class="d-flex">
-                  <div class="mr-auto p-2">
-                    <div class="col">
-                      <div class="row">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
                       <strong>Post Production Assistant</strong>
                     </div>
                     <div class="row">
                       UW-Extension Publications Department
                     </div>
-                    </div>
                   </div>
-                  <div class="p-2">1 year</div>
+                </div>
+                <div class="p-2">1 year</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Manage both digital and physical file collections/databases of previously
+                  created publications (approx. 1,500+) alongside related forms associated with author contact histories
+                  and edit histories</li>
+                <li class="list-group-item">Assist the production process of publications by doing any necessary filing
+                  for the publication and creating a page for the publication where it can be purchased by the public at
+                  our website, <a href="https://learningstore.extension.wisc.edu/">The Learning Store</a></li>
+                <li class="list-group-item">Utilize Adobe CC to create and edit graphics for online advertisements for
+                  products that are then posted onto multiple social media platforms</li>
+                <li class="list-group-item">Work with the Publishing Unit’s warehouse to coordinate the correct
+                  formatting, printing, and cutting of document proofs and final versions</li>
+                <li class="list-group-item">Digitize forms relating to the creation/editing/purchasing of older
+                  publications (circa early 1980s - present)</li>
+                <li class="list-group-item">Assist with the physical and digital transition of the Publishing Unit, as
+                  it is now under the ownership of UW-Madison (e.g. switching Ecommerce platforms and moving equipment
+                  to a new office environment)</li>
+              </ul>
             </div>
-            <ul class="list-group-flush">
-              <li class="list-group-item">Manage both digital and physical file collections/databases of previously created publications (approx. 1,500+) alongside related forms associated with author contact histories and edit histories</li>
-              <li class="list-group-item">Assist the production process of publications by doing any necessary filing for the publication and creating a page for the publication where it can be purchased by the public at our website, <a href="https://learningstore.extension.wisc.edu/">The Learning Store</a></li>
-              <li class="list-group-item">Utilize Adobe CC to create and edit graphics for online advertisements for products that are then posted onto multiple social media platforms</li>
-              <li class="list-group-item">Work with the Publishing Unit’s warehouse to coordinate the correct formatting, printing, and cutting of document proofs and final versions</li>
-              <li class="list-group-item">Digitize forms relating to the creation/editing/purchasing of older publications (circa early 1980s - present)</li>
-              <li class="list-group-item">Assist with the physical and digital transition of the Publishing Unit, as it is now under the ownership of UW-Madison (e.g. switching Ecommerce platforms and moving equipment to a new office environment)</li>
-            </ul>
-          </div>
-          <div class="list-group-item" id="PostProdIntern">
+            <div class="list-group-item" id="PostProdIntern">
               <div class="d-flex">
-                  <div class="mr-auto p-2">
-                    <div class="col">
-                      <div class="row">
+                <div class="mr-auto p-2">
+                  <div class="col">
+                    <div class="row">
                       <strong>Ecommerce Website Migration Extension Internship</strong>
                     </div>
                     <div class="row">
-                        UW-Extension Publications Department
-                    </div>
+                      UW-Extension Publications Department
                     </div>
                   </div>
-                  <div class="p-2">1 year</div>
-            </div>
-            <ul class="list-group-flush">
-                <li class="list-group-item">Assisted with the migration of 1,500+ PDF publication files, each of which must align with its product page counterpart</li>
-                <li class="list-group-item">Used HTML and CSS to assist with badging, branding, and visual design of individual product pages to align the Learning Store’s user interface with UW–Madison’s web guidelines and update catalog entries with legacy formatting</li>
-                <li class="list-group-item">Scouted the Learning Store catalog and publication pages for consistency in HTML formatting</li>
+                </div>
+                <div class="p-2">1 year</div>
+              </div>
+              <ul class="list-group-flush">
+                <li class="list-group-item">Assisted with the migration of 1,500+ PDF publication files, each of which
+                  must align with its product page counterpart</li>
+                <li class="list-group-item">Used HTML and CSS to assist with badging, branding, and visual design of
+                  individual product pages to align the Learning Store’s user interface with UW–Madison’s web guidelines
+                  and update catalog entries with legacy formatting</li>
+                <li class="list-group-item">Scouted the Learning Store catalog and publication pages for consistency in
+                  HTML formatting</li>
                 <li class="list-group-item">Ensured 301 redirects for URLs were functioning correctly</li>
-                <li class="list-group-item">Used Adobe CC to craft graphics and other marketing pieces for use on the Learning Store’s Shopify homepage and social media pages to promote new and revised publications</li>
-                <li class="list-group-item">Worked closely with the Publishing Unit’s off-site warehouse to coordinate, modify, and adjust Shopify email notifications for order fulfillment</li>
-                <li class="list-group-item">Created a custom invoicing sheet utilizing HTML, CSS, and Liquid (Shopify's custom template platform)</li>
-            </ul>
-          </div>
-        </ul>
+                <li class="list-group-item">Used Adobe CC to craft graphics and other marketing pieces for use on the
+                  Learning Store’s Shopify homepage and social media pages to promote new and revised publications</li>
+                <li class="list-group-item">Worked closely with the Publishing Unit’s off-site warehouse to coordinate,
+                  modify, and adjust Shopify email notifications for order fulfillment</li>
+                <li class="list-group-item">Created a custom invoicing sheet utilizing HTML, CSS, and Liquid (Shopify's
+                  custom template platform)</li>
+              </ul>
+            </div>
+          </ul>
+        </div>
       </div>
     </div>
-      
-  </body>
+</body>
+
 </html>
